[package]
name = "acpitool"
version = "1.0.0"
authors = ["ssnover95 <ssnover95@gmail.com>"]
edition = "2018"
description = "Shows information from the /proc filesystem such as battery status or thermal information."
repository = "https://github.com/ssnover95/acpitool"
license = "MIT"

[dependencies]
acpi_client = "1.0.0"
clap = "2.33.0"

[[bin]]
name = "acpitool"
path = "src/main.rs"

